# simple-cget

./: .gitignore  README.md
zdapp/: CMakeLists.txt  requirements.txt
zdapp/src/: zdapp.cpp
zdlib/: CMakeLists.txt
zdlib/include/: zd.hpp
zdlib/src/: zd.cpp
